--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
-body {}
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800');
+
+body {
+font-family: 'Montserrat', sans-serif;
+}
 
 #me {}
