--- a/style.css
+++ b/style.css
@@ -1,7 +1,66 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800');
-
-body {
-font-family: 'Montserrat', sans-serif;
+@import url("https://fonts.googleapis.com/css?family=Patrick+Hand&subset=vietnamese");
+#wrapper {
+  -webkit-display: flex;
+  -moz-display: flex;
+  -o-display: flex;
+  -ms-display: flex;
+  display: flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -o-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -o-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  height: 100%;
 }
 
-#me {}
+#alphabet {
+  font-family: "Patrick Hand", cursive;
+  -webkit-display: flex;
+  -moz-display: flex;
+  -o-display: flex;
+  -ms-display: flex;
+  display: flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -o-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+}
+#alphabet .char {
+  font-size: 16em;
+}
+#alphabet .char.regular {
+  font-style: normal;
+}
+#alphabet .char.capitalize {
+  text-transform: uppercase;
+}
+
+body,
+html {
+  height: 100%;
+}
+
+body {
+  font-size: 16px;
+  -webkit-display: flex;
+  -moz-display: flex;
+  -o-display: flex;
+  -ms-display: flex;
+  display: flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -o-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -o-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+}
