--- a/pug/index.pug
+++ b/pug/index.pug
@@ -8,7 +8,7 @@ html(lang="en")
         link(rel="stylesheet" href="styles.css")
 
     body
-        #wrapper
+        .container#wrapper
             #alphabet
                 p#cap.char.capitalize
                 p#reg.char.regular
