--- a/pug/index.pug
+++ b/pug/index.pug
@@ -13,4 +13,6 @@ html(lang="en")
                 p#cap.char.capitalize
                 p#reg.char.regular
             button#random.btn.btn-lg.btn-primary Random
+        script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js")
+        script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js")
         script(src="js/scripts.js")
