--- a/css/styles.css
+++ b/css/styles.css
@@ -1,78 +1,1 @@
-@import url("https://fonts.googleapis.com/css?family=Patrick+Hand&subset=vietnamese");
-body,
-html {
-  height: 100%; }
-
-body {
-  font-size: 16px;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  box-pack: center;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  -ms-justify-content: center;
-  -o-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center; }
-
-#wrapper {
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  -webkit-flex-direction: column;
-  -moz-flex-direction: column;
-  height: 100%; }
-
-#alphabet {
-  font-family: "Patrick Hand", cursive;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center; }
-  #alphabet .char {
-    font-size: 16em; }
-    #alphabet .char.regular {
-      font-style: normal; }
-    #alphabet .char.capitalize {
-      text-transform: uppercase; }
+@import url("https://fonts.googleapis.com/css?family=Patrick+Hand&subset=vietnamese");body,html{height:100%}body{font-size:16px}#wrapper,body{display:flex;align-items:center;justify-content:center}#wrapper{height:100%}#alphabet,#wrapper{flex-direction:column}#alphabet{font-family:Patrick Hand,cursive;display:flex;align-items:center}#alphabet .char{font-size:16em}#alphabet .char.regular{font-style:normal}#alphabet .char.capitalize{text-transform:uppercase}
